# cd-dat-utils

./: .gitignore  README.md  dat_utils.py  pyproject.toml  requirements-dev.txt
.github/workflows/: unit-tests.yaml  verify.yaml
src/: dat.py  dat_utils.py
src/cd_dat_utils/cli/: __main__.py  cli.py  commands.py
src/cd_dat_utils/core/: config.py  dat.py  overlays.py
src/utils/: config.py
tests/: test_dat.py  test_utils.py
tests/cli/: test_cli.py
tests/core/: test_config.py  test_dat.py  test_overlays.py
tests/test_data/: test_config.json  test_config.yaml  test_config_invalid.yaml  test_file_map.yaml  test_structure.yaml
tests/test_data/unpacked/dir_1/: test_file1.drm  test_file2.drm
